testsuite/poke.pkl/format-diag-7.pk
/* { dg-do compile } */

format (" %f64b %s", 1U, "Hi"); /* { dg-error "" } */
